00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banka-1
  labels:
    app.kubernetes.io/part-of: banka-1
